<resources>
    <string name="app_name">PhoneMirrorClient</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="no_devices_found_text">No devices were found.</string>
    <string name="select_device_title">Select a device to pair</string>
    <string name="cd_list_item_open_close">Open or close this list item</string>
    <string name="pairing_title_fmt">Pairing with %s:</string>
    <string name="pair_desc_qr">Pair by scanning a QR code</string>
    <string name="qr_security_warning">Note: For security reasons, you should not use this option in an area where someone could be watching your screen.</string>
    <string name="pair_desc_pw">Pair by using a password</string>
    <string name="pair_desc_usb">Pair by using a USB connection</string>
    <string name="cd_usb_icon">USB icon</string>
    <string name="cd_qr_icon">QR code icon</string>
    <string name="cd_pw_icon">Password icon</string>

</resources>
